export const snapshot = {};

snapshot[`Issue Update Command - Help Text 1`] = `
stdout:
"
Usage: update [issueId]

Description:

  Update a linear issue

Options:

  -h, --help                         - Show this help.                                                                   
  -a, --assignee     <assignee>      - Assign the issue to 'self' or someone (by username or name)                       
  --due-date         <dueDate>       - Due date of the issue                                                             
  -p, --parent       <parent>        - Parent issue (if any) as a team_number code                                       
  --priority         <priority>      - Priority of the issue (1-4, descending priority)                                  
  --estimate         <estimate>      - Points estimate of the issue                                                      
  -d, --description  <description>   - Description of the issue                                                          
  -l, --label        [label...]      - Issue label associated with the issue. May be repeated.                           
  --team             <team>          - Team associated with the issue (if not your default team)                         
  --project          <project>       - Name of the project with the issue                                                
  -s, --state        <state>         - Workflow state for the issue (by name or type)                                    
  --blocking         [blocking...]   - Issue(s) that this issue blocks (e.g., ENG-123 or just 123 for current team).     
                                       May be repeated.                                                                  
  --blocked-by       [blockedBy...]  - Issue(s) that block this issue (e.g., ENG-123 or just 123 for current team). May  
                                       be repeated.                                                                      
  --no-color                         - Disable colored output                                                            
  -t, --title        <title>         - Title of the issue                                                                

"
stderr:
""
`;

snapshot[`Issue Update Command - Happy Path 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Updated authentication bug fix
https://linear.app/test-team/issue/ENG-123/updated-authentication-bug-fix
"
stderr:
""
`;

snapshot[`Issue Update Command - Case Insensitive Label Matching 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Blocking Relationships 1`] = `
stdout:
"Updating issue ENG-123

Creating issue relations...
✗ Failed to create blocking relation with ENG-124
✗ Failed to create blocking relation with ENG-125
✗ Failed to create blocked-by relation with ENG-126
Relations summary: 0 created, 3 failed, 0 skipped
✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;
